tests/baselines/reference/AnnotationDeclarationNegative4.errors.txt
tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative4.ets(1,17): error TS1005: '{' expected.
tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative4.ets(1,17): error TS2304: Cannot find name 'implements'.
tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative4.ets(1,28): error TS1434: Unexpected keyword or identifier.
tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative4.ets(1,28): error TS2304: Cannot find name 'A'.


==== tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative4.ets (4 errors) ====
    @interface Anno implements A {}
                    ~~~~~~~~~~
!!! error TS1005: '{' expected.
                    ~~~~~~~~~~
!!! error TS2304: Cannot find name 'implements'.
                               ~
!!! error TS1434: Unexpected keyword or identifier.
                               ~
!!! error TS2304: Cannot find name 'A'.